create jobs route
